<resources>
    <string name="app_name">CryptoWallet</string>
    <string name="retry">Retry</string>
    <string name="continue_text">Continue</string>
    <string name="easiness">Easiness</string>
    <string name="security">Security</string>
    <string name="transformation">Transformation</string>
    <string name="something_broken_title">Something is broken</string>
    <string name="something_broken_message">Check your Internet Connection and click Retry to try again</string>
    <string name="easiness_description">Supplying the convenient \ntransactions chains</string>
    <string name="security_description">Providing crypto audience with \nhigh-tech security solutions</string>
    <string name="transformation_description">Diversifying crypto investment \nexperience worldwide</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="deposit_text">Deposit</string>
    <string name="withdraw_text">Withdraw</string>
    <string name="trending">Trending</string>
    <string name="news_text">News</string>
    <string name="show_all">Show all</string>
    <string name="btc_text">BTC</string>
    <string name="usd_text">USD</string>
    <string name="available_text">Available: 0</string>
    <string name="low_text">24h Low</string>
    <string name="high_text">24h High</string>
    <string name="volume_btc">Volume (BTC)</string>
    <string name="buy_btc">Buy BTC</string>
    <string name="sell_btc">Sell BTC</string>
    <string name="about_btc">About BTC</string>
    <string name="show_more_with_plus">Show more +</string>
    <string name="text_stub_about_btc">Bitcoin is a decentralized digital currency created in January 2009. It follows the ideas set out in a whitepaper by the mysterious and pseudonymous Satoshi Nakamoto.\n\nThe identity of the person or persons who created the technology is still a mystery. Bitcoin offers the </string>
</resources>