<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/transformationImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_transformation"
        app:layout_constraintBottom_toTopOf="@id/transformationInfoBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/transformationInfoBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/bg_onboarding_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/transformationTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/transformationTitle"
        style="@style/TextAppearance.CryptoWallet.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:paddingTop="42dp"
        android:text="@string/transformation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/transformationDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/transformationDescription"
        style="@style/TextAppearance.CryptoWallet.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/transformation_description"
        android:textColor="@color/typography_gray"
        app:layout_constraintBottom_toTopOf="@id/transformationContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/transformationContinue"
        style="@style/TextAppearance.CryptoWallet.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/bg_onboarding_button"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/continue_text"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>